# tree-sitter

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  build.zig  flake.nix  group_names.diff
.github/scripts/: cross.sh  make.sh  npm.sh  tree-sitter.sh
.github/workflows/: CICD.yml  bsd.yml  build.yml  ci.yml  fast_checks.yml  full_rust_checks.yml  release.yml
cli/: Cargo.toml  build.rs
cli/config/: Cargo.toml
cli/examples/: language-syms.rs
cli/generate/src/: dsl.js  grammars.rs  lib.rs  nfa.rs  node_types.rs  parse_grammar.rs  render.rs  rules.rs
cli/generate/src/build_tables/: build_lex_table.rs  build_parse_table.rs  item_set_builder.rs  minimize_parse_table.rs  mod.rs
cli/generate/src/prepare_grammar/: expand_repeats.rs  expand_tokens.rs  extract_default_aliases.rs  extract_tokens.rs  flatten_grammar.rs  mod.rs
cli/loader/: Cargo.toml
cli/loader/src/: lib.rs
cli/npm/: dsl.d.ts  install.js
cli/src/: highlight.rs  init.rs  input.rs  lib.rs  main.rs  parse.rs  playground.rs  query.rs  query_testing.rs  render.rs  tags.rs  test.rs  test_highlight.rs  visitor.rs  wasm.rs
cli/src/fuzz/: corpus_test.rs  mod.rs
cli/src/generate/: binding_files.rs  dsl.js  grammar_files.rs  mod.rs  parse_grammar.rs  render.rs  rules.rs
cli/src/generate/build_tables/: build_parse_table.rs  minimize_parse_table.rs  mod.rs
cli/src/generate/prepare_grammar/: extract_tokens.rs  intern_symbols.rs  mod.rs  unicode-categories.json
cli/src/generate/templates/: cargo.toml  package.json
cli/src/templates/: _cargo.toml  build.zig  build.zig.zon  go.mod  lib.rs  root.zig
cli/src/tests/: node_test.rs  parser_test.rs  query_test.rs  tree_test.rs
cli/src/tests/helpers/: dirs.rs  fixtures.rs
crates/cli/: Cargo.toml
crates/cli/npm/: dsl.d.ts  install.js
crates/cli/src/: highlight.rs  main.rs  parse.rs  query.rs  test.rs  test_highlight.rs  test_tags.rs  version.rs
crates/cli/src/templates/: build.zig  makefile
crates/cli/src/tests/: node_test.rs  parser_test.rs  query_test.rs
crates/generate/src/: build_tables.rs  grammars.rs  nfa.rs  parser.h.inc  render.rs  rules.rs
crates/generate/src/build_tables/: build_lex_table.rs
crates/generate/src/prepare_grammar/: expand_tokens.rs  extract_default_aliases.rs  extract_tokens.rs
crates/loader/src/: loader.rs
crates/xtask/src/: build_wasm_freestanding.rs  main.rs
docs/: section-3-creating-parsers.md
highlight/: Cargo.toml
highlight/src/: lib.rs
lib/: Cargo.toml  compile_flags.txt
lib/binding_rust/: bindings.rs  build.rs  lib.rs
lib/binding_web/: binding.c  package.json  test-freestanding.html
lib/binding_web/lib/: wasm-loader.d.ts  wasm-loader.js
lib/binding_web/src/: bindings.ts
lib/include/tree_sitter/: api.h  parser.h
lib/src/: alloc.h  atomic.h  clock.h  edit.c  get_changed_ranges.c  language.c  language.h  lexer.c  lexer.h  lib.c  node.c  parser.c  parser.h  query.c  stack.c  stack.h  subtree.c  subtree.h  tree.c  tree_cursor.c  tree_cursor.h  tree_sitter.def  unicode.h  wasm_store.c
lib/src/portable/: endian.h
script/: build-wasm  generate-bindings  generate-fixtures-wasm  generate-unicode-categories-json
tags/: Cargo.toml
tags/src/: lib.rs
