[package]
name = "tree-sitter-cli"
description = "CLI tool for developing, testing, and using Tree-sitter parsers"
version = "0.21.0-alpha.1"
authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing"]
categories = ["command-line-utilities", "parsing"]
repository = "https://github.com/tree-sitter/tree-sitter"
rust-version.workspace = true

[[bin]]
name = "tree-sitter"
path = "src/main.rs"
doc = false

[[bench]]
name = "benchmark"
harness = false

[dependencies]
tree-sitter = { path = "../lib", version = "0.21.0-alpha.1" }
tree-sitter-config = { path = "config", version = "0.21.0-alpha.1" }
tree-sitter-loader = { path = "loader", version = "0.21.0-alpha.1" }
tree-sitter-highlight = { path = "../highlight", version = "0.21.0-alpha.1" }
tree-sitter-tags = { path = "../tags", version = "0.21.0-alpha.1" }

ansi_term = "0.12"
anyhow = "1.0"
atty = "0.2"
clap = { version = "4.1", features = ["env", "cargo", "derive", "string", "wrap_help"] }
ctrlc = { version = "3.2.5", features = ["termination"] }
difference = "2.0"
dirs = "4.0"
glob = "0.3"
html-escape = "0.2"
indexmap = "1.9"
lazy_static = "1.4"
log = { version = "0.4", features = ["std"] }
path-slash = "0.2"
regex = "1.7"
regex-syntax = "0.6"
rustc-hash = "1"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
smallbitvec = "2.5"
tiny_http = "0.12"
walkdir = "2.3"
webbrowser = "0.8"
which = "4.4"
indoc = "2"

[dev-dependencies]
proc_macro = { path = "src/tests/proc_macro", package = "tree-sitter-tests-proc-macro" }

rand = "0.8"
tempfile = "3"
pretty_assertions = "1.3"
libloading = "0.7"
ctor = "0.1"
convert_case = "0.6.0"
unindent = "0.2"
indoc = "2.0.1"

[build-dependencies]
toml = "0.6"
