[package]
name = "tree-sitter-cli"
description = "CLI tool for developing, testing, and using Tree-sitter parsers"
version = "0.21.0-alpha.1"
authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing"]
categories = ["command-line-utilities", "parsing"]
repository = "https://github.com/tree-sitter/tree-sitter"
rust-version.workspace = true

[[bin]]
name = "tree-sitter"
path = "src/main.rs"
doc = false

[[bench]]
name = "benchmark"
harness = false

[dependencies]
tree-sitter = { path = "../lib", version = "0.21.0-alpha.1" }
tree-sitter-config = { path = "config", version = "0.21.0-alpha.1" }
tree-sitter-loader = { path = "loader", version = "0.21.0-alpha.1" }
tree-sitter-highlight = { path = "../highlight", version = "0.21.0-alpha.1" }
tree-sitter-tags = { path = "../tags", version = "0.21.0-alpha.1" }

ansi_term = "0.12.1"
anyhow = "1.0.72"
atty = "0.2.14"
bstr = "1.4.0"
bytecount = "0.6.3"
clap = { version = "4.1", features = ["env", "cargo", "derive", "string", "wrap_help"] }
ctrlc = { version = "3.4.0", features = ["termination"] }
difference = "2.0.0"
dirs = "5.0.1"
glob = "0.3.1"
html-escape = "0.2.13"
indexmap = "2.0.0"
lazy_static = "1.4.0"
log = { version = "0.4", features = ["std"] }
path-slash = "0.2.1"
regex = "1.9.1"
regex-syntax = "0.7.4"
rustc-hash = "1.1.0"
semver = "1.0.18"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
smallbitvec = "2.5.1"
tiny_http = "0.12.0"
walkdir = "2.3.3"
webbrowser = "0.8.10"
which = "4.4.0"
indoc = "2"

[dev-dependencies]
proc_macro = { path = "src/tests/proc_macro", package = "tree-sitter-tests-proc-macro" }

rand = "0.8.5"
tempfile = "3.6.0"
pretty_assertions = "1.4.0"
libloading = "0.7"
ctor = "0.2.4"
convert_case = "0.6.0"
unindent = "0.2.2"
indoc = "2.0.3"

[build-dependencies]
toml = "0.7.6"
