[package]
name = "tree-sitter"
description = "Rust bindings to the Tree-sitter parsing library"
version = "0.21.0-alpha.1"
authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "binding_rust/README.md"
keywords = ["incremental", "parsing"]
categories = ["api-bindings", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter"

build = "binding_rust/build.rs"

include = [
  "/binding_rust/*",
  "/Cargo.toml",
  "/include/*",
  "/src/*.h",
  "/src/*.c",
  "/src/unicode/*",
]

[dependencies]
lazy_static = { version = "1.4", optional = true }
regex = "1.7"

[build-dependencies]
cc = "1.0.78"

[lib]
path = "binding_rust/lib.rs"
