[package]
name = "tree-sitter-tags"
description = "Library for extracting tag information"
version = "0.21.0-alpha.1"
authors = [
  "Max Brunsfeld <maxbrunsfeld@gmail.com>",
  "Patrick Thomson <patrickt@github.com>",
]
license = "MIT"
readme = "README.md"
edition = "2021"
keywords = ["incremental", "parsing", "syntax", "tagging"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter"
rust-version.workspace = true

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
tree-sitter = { path = "../lib", version = "0.21.0-alpha.1" }

regex = "1.7"
memchr = "2.5"
thiserror = "1.0"
