[package]
name = "tree-sitter-loader"
description = "Locates, builds, and loads tree-sitter grammars at runtime"
version = "0.21.0-alpha.1"
authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing"]
categories = ["command-line-utilities", "parsing"]
repository = "https://github.com/tree-sitter/tree-sitter"

[dependencies]
tree-sitter = { path = "../../lib", version = "0.21.0-alpha.1" }
tree-sitter-highlight = { path = "../../highlight", version = "0.21.0-alpha.1" }
tree-sitter-tags = { path = "../../tags", version = "0.21.0-alpha.1" }

anyhow = "1.0"
cc = "1.0.78"
dirs = "4.0"
libloading = "0.7"
once_cell = "1.17"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
