[package]
name = "tree-sitter-loader"
description = "Locates, builds, and loads tree-sitter grammars at runtime"
version = "0.20.0"
authors = ["Max Brunsfeld <maxbrunsfeld@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing"]
categories = ["command-line-utilities", "parsing"]
repository = "https://github.com/tree-sitter/tree-sitter"
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
cc = "^1.0.58"
dirs = "3.0"
libloading = "0.7"
once_cell = "1.7"
regex = "1"
serde = { version = "1.0.130", features = ["derive"] }

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dependencies.tree-sitter]
version = "0.20"
path = "../../lib"

[dependencies.tree-sitter-highlight]
version = "0.20"
path = "../../highlight"

[dependencies.tree-sitter-tags]
version = "0.20"
path = "../../tags"

[target.'cfg(target_env = "musl")'.dependencies]
tree-sitter-bash = { path = "../../test/fixtures/grammars/bash/" }
tree-sitter-c = { path = "../../test/fixtures/grammars/c/" }
tree-sitter-cpp = { path = "../../test/fixtures/grammars/cpp/" }
tree-sitter-embedded-template = { path = "../../test/fixtures/grammars/embedded-template/" }
tree-sitter-go = { path = "../../test/fixtures/grammars/go/" }
tree-sitter-html = { path = "../../test/fixtures/grammars/html/" }
tree-sitter-java = { path = "../../test/fixtures/grammars/java/" }
tree-sitter-javascript = { path = "../../test/fixtures/grammars/javascript/" }
tree-sitter-jsdoc = { path = "../../test/fixtures/grammars/jsdoc/" }
tree-sitter-json = { path = "../../test/fixtures/grammars/json/" }
tree-sitter-php = { path = "../../test/fixtures/grammars/php/" }
tree-sitter-python = { path = "../../test/fixtures/grammars/python/" }
tree-sitter-ruby = { path = "../../test/fixtures/grammars/ruby/" }
tree-sitter-rust = { path = "../../test/fixtures/grammars/rust/" }
tree-sitter-typescript = { path = "../../test/fixtures/grammars/typescript/" }
